--- a/style.css
+++ b/style.css
@@ -24,14 +24,16 @@ body {
   width: 200px;
   height: 40px;
   font-size: 20px;
-  font-family: 'Press Start 2P' , sans-serif;
+  font-family: 'Press Start 2P', sans-serif;
   color: black;
   position: absolute;
   top: 10px;
+  user-select: none;
 }
 
 .bestScore {
   right: 0;
+  user-select: none;
 }
 
 .countdown {
@@ -41,6 +43,7 @@ body {
   left: 200px;
   font-weight: bold;
   color: lightgoldenrodyellow;
+  user-select: none;
 }
 
 .scoreTable {
@@ -51,12 +54,13 @@ body {
   width: 200px;
   height: 100px;
   font-size: 20px;
-  font-family: 'Press Start 2P' , sans-serif;
+  font-family: 'Press Start 2P', sans-serif;
   color: black;
   position: absolute;
   background-color: burlywood;
   top: 350px;
   left: 123px;
+  user-select: none;
 }
 
 .button {
@@ -74,6 +78,7 @@ body {
   bottom: 250px;
   right: 133px;
   cursor: pointer;
+  user-select: none;
 }
 
 .end-game {
@@ -85,14 +90,7 @@ body {
   bottom: 193px;
   right: 133px;
   color: black;
-}
-
-.start-button {
-  display: none;
-  position: absolute;
-  top: 350px;
-  left: 150px;
-  cursor: pointer;
+  user-select: none;
 }
 
 .invisible {
